--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -5,20 +5,39 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#DEBEBE"
     android:orientation="vertical"
     android:gravity="center"
     >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        android:textColor="#FF0000"
-        />
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="227dp"
-        android:src="@drawable/spiderman" />
+        android:layout_marginTop="16dp"
+        android:src="@drawable/bloodhub" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="BloodHub "
+        android:textColor="#B10E0E"
+        android:layout_gravity="center"
+        android:textStyle="bold"
+        android:layout_marginTop="16dp"
+        android:textAlignment="center"
+        android:textSize="32sp"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Blood For Life,Life for All !!🩸"
+        android:textColor="#B10E0E"
+        android:textSize="20sp"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        android:layout_marginTop="12sp"/>
+
 
 </LinearLayout>
