--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,7 +17,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Login Page"
+        android:text="This is updated Login Page"
         android:textStyle="bold"
         android:gravity="center"
         android:textSize="32sp"/>
