--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -21,7 +21,7 @@
         android:elevation="8dp"
         app:labelVisibilityMode="labeled"
         app:menu="@menu/home_bottom_navigation"
-        app:itemIconTint="@color/icon_selector_colour"
-        app:itemTextColor="@color/icon_selector_colour" />
+        app:itemIconTint="@color/bottom_nav_colors"
+        app:itemTextColor="@color/bottom_nav_colors" />
 
 </RelativeLayout>
