--- a/app/src/main/res/menu/home_bottom_navigation.xml
+++ b/app/src/main/res/menu/home_bottom_navigation.xml
@@ -18,9 +18,10 @@
         android:iconTint="@color/black"
         android:title="Request for Blood" />
     <item
+
         android:id="@+id/nav_profile"
         android:iconTint="@color/black"
         android:icon="@drawable/icon_profile"
-        android:title="Request for Blood" />
+        android:title="Profile" />
 
 </menu>
