--- a/app/src/main/res/layout/fragment_request_for_blood.xml
+++ b/app/src/main/res/layout/fragment_request_for_blood.xml
@@ -43,7 +43,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="(Kindly fill the details correctly to help you better)"
-            android:textColor="#5A5A5A"
+            android:textColor="#000000"
             android:textSize="14sp"
             android:layout_gravity="center_horizontal"/>
 
@@ -52,7 +52,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
-            android:hint="Select Blood Type">
+            android:hint="Select Blood Type"
+            android:textColorHint="#999999"
+            app:errorTextColor="@color/black"
+
+            >
 
             <AutoCompleteTextView
                 android:id="@+id/bloodTypeDropdown"
@@ -67,14 +71,18 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:hint="Patient First name"
+            android:textColorHint="#999999"
+            app:errorTextColor="@color/black"
             app:endIconMode="custom"
-            app:endIconDrawable="@drawable/icon_profile">
+            app:endIconDrawable="@drawable/ic_person"
+            app:endIconTint="@color/black">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/patientNameEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPersonName" />
+                android:inputType="textPersonName"
+                />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -83,15 +91,18 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:hint="Attendee Mobile Number"
-            app:endIconMode="custom"
-            app:endIconDrawable="@drawable/icon_mobile">
+            app:endIconDrawable="@drawable/icon_mobile"
+            app:endIconTint="@color/black"
+            app:endIconMode="custom">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/mobileNumberEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="phone"
-                />
+                android:text="7620254303"
+                android:textColorHint="#999999"
+                app:errorTextColor="@color/black"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -99,7 +110,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:hint="Select Blood Group">
+            android:hint="Select Blood Group"
+            android:textColorHint="#999999"
+            app:errorTextColor="@color/black"
+           >
 
             <AutoCompleteTextView
                 android:id="@+id/bloodGroupDropdown"
@@ -114,8 +128,11 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:hint="Required Date"
+            android:textColorHint="#999999"
+            app:errorTextColor="@color/black"
             app:endIconMode="custom"
-            app:endIconDrawable="@drawable/ic_calendar">
+            app:endIconDrawable="@drawable/ic_calendar"
+            app:endIconTint="@color/black">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/requiredDateEditText"
@@ -123,7 +140,8 @@
                 android:layout_height="wrap_content"
                 android:focusable="false"
                 android:clickable="true"
-                android:inputType="none" />
+                android:inputType="none"
+                />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -131,7 +149,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:hint="Select Units">
+            android:hint="Select Units"
+            android:textColorHint="#999999"
+            app:errorTextColor="@color/black">
 
             <AutoCompleteTextView
                 android:id="@+id/unitsDropdown"
@@ -150,7 +170,8 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:text="Critical"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                android:textColor="@color/black"/>
 
             <Switch
                 android:id="@+id/criticalSwitch"
@@ -158,7 +179,11 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
-                android:layout_marginEnd="8dp" />
+                android:layout_marginEnd="8dp"
+                android:textColor="@color/black"
+                android:thumbTint="@color/black"
+                android:trackTint="#999999"
+                />
         </RelativeLayout>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -166,8 +191,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            app:endIconMode="custom"
             android:hint="Please select location"
+            android:textColorHint="#999999"
+            app:errorTextColor="@color/black"
+            app:endIconMode="custom"
+            app:endIconTint="@color/black"
             app:endIconDrawable="@drawable/ic_location">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -182,6 +210,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
+            android:textColorHint="#999999"
+            app:errorTextColor="@color/black"
             android:hint="Additional note to potential donors">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -197,14 +227,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:gravity="center"
-            android:orientation="horizontal"
-            >
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
             <CheckBox
                 android:id="@+id/termsCheckBox"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:buttonTint="@color/bottom_nav_colors"
+                />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -213,19 +244,17 @@
                 android:textColor="@android:color/black"
                 android:textSize="14sp" />
 
-            </LinearLayout>
-        <TextView
-            android:id="@+id/termsAndPolicyLink"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:clickable="true"
-            android:focusable="true"
-            android:text="Terms of Use and Privacy Policy"
-            android:textColor="#D32F2F"
-            android:textSize="14sp"
-            android:textStyle="bold"
-            android:layout_gravity="center"/>
-
+            <TextView
+                android:id="@+id/termsAndPolicyLink"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                android:focusable="true"
+                android:text="Terms of Use and Privacy Policy"
+                android:textColor="#D32F2F"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+        </LinearLayout>
 
         <Button
             android:id="@+id/sendRequestButton"
