--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -271,6 +271,7 @@
                 android:layout_height="80dp"
                 android:layout_weight="1"
                 android:gravity="center"
+                android:id="@+id/contribute"
                 android:orientation="vertical"
                 android:background="@drawable/bg_card">
 
