--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -87,6 +87,7 @@
             app:iss_auto_cycle="true"
             app:iss_period="2000"
             app:iss_delay="2000"
+            android:layout_margin="12dp"
             android:clickable="true"
             app:iss_text_align="CENTER"
             app:iss_text_color="black"
