--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
+    android:layout_height="220dp"
     android:background="@color/red"
-    android:gravity="bottom"
-    android:orientation="vertical"
     android:padding="16dp"
+    android:orientation="vertical"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <FrameLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:background="@drawable/circle_background"
         android:padding="8dp"> <ImageView
         android:id="@+id/imageView"
@@ -23,9 +22,9 @@
         android:layout_height="wrap_content"
         android:paddingTop="8dp"
         android:text="BloodHub"
-        android:textSize="18sp"
+        android:textSize="25sp"
         android:textStyle="bold"
-        android:layout_marginLeft="15dp"
+        android:layout_marginLeft="25dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
 
