--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -10,7 +10,7 @@
         android:layout_width="0dp"
         android:layout_height="70sp"
 
-        android:background="#FF3A3A"
+        android:background="#D32F2F"
         app:title="BloodHub"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
