--- a/app/src/main/res/menu/home_menu.xml
+++ b/app/src/main/res/menu/home_menu.xml
@@ -7,18 +7,25 @@
         android:id="@+id/menuToggleView"
         android:title="Calendar"
         app:showAsAction="always"
-        android:icon="@drawable/ic_calendar" />
+        android:iconTint="@color/white"
+        android:icon="@drawable/ic_calendar"
+
+        />
 
     <item
         android:id="@+id/menuSettings"
         android:title="Settings"
         app:showAsAction="always"
-        android:icon="@drawable/icon_settings"/>
+        android:icon="@drawable/icon_settings"
+        android:iconTint="@color/white"
+        />
 
     <item
         android:id="@+id/menuNotification"
         android:title="Notification"
         app:showAsAction="always"
+        android:iconTint="@color/white"
+
         android:icon="@drawable/icon_notification"/>
 
 
