--- a/app/src/main/res/layout/activity_contribute.xml
+++ b/app/src/main/res/layout/activity_contribute.xml
@@ -54,25 +54,11 @@
                 android:gravity="center"
                 android:background="#80000000">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Make a Contribution"
-                    android:textColor="#FFFFFF"
-                    android:textSize="20sp"
-                    android:textStyle="bold" />
 
-                <Button
-                    android:id="@+id/btnContributeNow"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Contribute Now!"
-                    android:textColor="#FFFFFF"
-                    android:backgroundTint="#D32F2F"
-                    android:layout_marginTop="10dp"/>
             </LinearLayout>
-        </RelativeLayout>
 
+
+        </RelativeLayout>
 
         <TextView
             android:layout_width="match_parent"
@@ -83,7 +69,16 @@
             android:padding="16dp"
             android:background="#F5F5F5"/>
 
+        <Button
+            android:id="@+id/btnContributeNow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Contribute Now!"
+            android:textColor="#FFFFFF"
+            android:backgroundTint="#B71C1C"
+            android:layout_gravity="center"
 
+            />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
