--- a/app/src/main/res/menu/nav_drawer_menu.xml
+++ b/app/src/main/res/menu/nav_drawer_menu.xml
@@ -36,7 +36,7 @@
         <item
             android:id="@+id/nav_logout"
             android:icon="@drawable/icon_log_out"
-            android:title="Notifications" />
+            android:title="Log Out" />
 
     </group>
 
