--- a/app/src/main/res/menu/nav_drawer_menu.xml
+++ b/app/src/main/res/menu/nav_drawer_menu.xml
@@ -5,7 +5,6 @@
 
     <group android:checkableBehavior="single">
         <item
-            
             android:id="@+id/nav_donate_history"
             android:icon="@drawable/icon_donate"
             android:title="Donate History" />
@@ -36,7 +35,7 @@
         <item
             android:id="@+id/nav_logout"
             android:icon="@drawable/icon_log_out"
-            android:title="Notifications" />
+            android:title="Logout" />
 
     </group>
 
