--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
-    <color name="gray">#999999</color>
     <color name="red">#D32F2F</color>
+    <color name="colorPrimary">#D32F2F</color> <!-- Red -->
+    <color name="colorPrimaryDark">#B71C1C</color> <!-- Dark Red for status bar -->
+    <color name="colorAccent">#FF5252</color>
+    <color name="purple_500">#6200EE</color>
+    <color name="purple_700">#3700B3</color>
+    <color name="purple_200">#BB86FC</color>
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
+    <color name="gray">#757575</color>
 </resources>
